--- a/Capstone/app/src/main/res/values/colors.xml
+++ b/Capstone/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#01a6ca</color>
+    <color name="colorPrimaryDark">#0084a1</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBackgrond">#eff9fb</color>
 </resources>
