--- a/Capstone/app/src/main/res/layout/content_about.xml
+++ b/Capstone/app/src/main/res/layout/content_about.xml
@@ -24,4 +24,8 @@
         android:id="@+id/textView2"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true" />
+
+    <Button android:id="@+id/ad_button" android:layout_width="wrap_content"
+        android:layout_height="wrap_content" android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" android:text="@string/ad_button" />
 </RelativeLayout>
